add with params and make it an array in swagger ui
